# motion-sentinel

./: .gitignore  README.md  pyproject.toml
config/: default.yaml
motion_sentinel/: __init__.py  __main__.py  pipeline.py
motion_sentinel/analysis/: alert_manager.py  motion_analyzer.py  stat_engine.py
motion_sentinel/capture/: config.py  frame_buffer.py  video_source.py
motion_sentinel/common/: app_config.py  config_manager.py  logger.py  url_utils.py
motion_sentinel/core/: motion_detector.py  preprocessor.py  roi_manager.py
motion_sentinel/output/: recorder.py  renderer.py
tests/unit/: test_config.py  test_detector_flow.py  test_frame_buffer.py  test_pipeline_headless.py  test_roi_scaling.py  test_video_source_url_utils.py
